Some ggplot wizardry

--- a/aalto.bib
+++ b/aalto.bib
@@ -3616,6 +3616,11 @@
   file = {/home/avnerus/Zotero/storage/2L6HK7GS/Hancock et al. - 2011 - A Meta-Analysis of Factors Affecting Trust in Huma.pdf}
 }
 
+@misc{HandbookIntroductionCumulative,
+  title = {R {{Handbook}}: {{Introduction}} to {{Cumulative Link Models}} ({{CLM}}) for {{Ordinal Data}}},
+  howpublished = {https://rcompanion.org/handbook/G\_01.html}
+}
+
 @book{hannafordFeelingBelievingHistory2000,
   title = {Feeling Is {{Believing}}: {{A History}} of {{Telerobotics}}. {{The Robot}} in the {{Garden}}: {{Telerobotics}} and {{Telepistemology}} in the {{Age}} of the {{Internet}}. {{Edited}} by {{Ken Goldberg}}},
   author = {Hannaford, B.},
