Mean individual diff

--- a/aalto.bib
+++ b/aalto.bib
@@ -3080,6 +3080,22 @@
   file = {/home/avnerus/Zotero/storage/SX93ERNK/Friston - 2010 - The free-energy principle a unified brain theory.pdf;/home/avnerus/Zotero/storage/RKXPC39R/nrn2787.html}
 }
 
+@article{fristonInterestingObservationsFree2021,
+  title = {Some {{Interesting Observations}} on the {{Free Energy Principle}}},
+  author = {Friston, Karl J. and Da Costa, Lancelot and Parr, Thomas},
+  year = {2021},
+  month = aug,
+  journal = {Entropy},
+  volume = {23},
+  number = {8},
+  pages = {1076},
+  issn = {1099-4300},
+  doi = {10.3390/e23081076},
+  abstract = {Biehl et al. (2021) present some interesting observations on an early formulation of the free energy principle. We use these observations to scaffold a discussion of the technical arguments that underwrite the free energy principle. This discussion focuses on solenoidal coupling between various (subsets of) states in sparsely coupled systems that possess a Markov blanket\textemdash and the distinction between exact and approximate Bayesian inference, implied by the ensuing Bayesian mechanics.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/8PUINZWY/Friston et al. - 2021 - Some Interesting Observations on the Free Energy P.pdf}
+}
+
 @article{fristonReinforcementLearningActive2009,
   title = {Reinforcement {{Learning}} or {{Active Inference}}?},
   author = {Friston, Karl J. and Daunizeau, Jean and Kiebel, Stefan J.},
@@ -4713,6 +4729,24 @@
   langid = {english},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing},
   file = {/home/avnerus/Zotero/storage/JJ97ZN4L/Jia et al. - 2019 - Direct speech-to-speech translation with a sequenc.pdf}
+}
+
+@misc{jiajinchenIntroduction2021,
+  title = {Introduction},
+  author = {JiajinChen},
+  year = {2021},
+  month = sep,
+  abstract = {shinyBN: An online application for interactive Bayesian network inference and visualization},
+  copyright = {Apache-2.0}
+}
+
+@misc{jiajinchenIntroduction2021a,
+  title = {Introduction},
+  author = {JiajinChen},
+  year = {2021},
+  month = sep,
+  abstract = {shinyBN: An online application for interactive Bayesian network inference and visualization},
+  copyright = {Apache-2.0}
 }
 
 @article{jiaTransferLearningSpeaker2019,
