--- a/aalto.bib
+++ b/aalto.bib
@@ -5519,6 +5519,15 @@
   file = {/home/avnerus/Zotero/storage/AYWZZ9G8/Kteily et al. - 2016 - They see us as less than human Metadehumanization.pdf}
 }
 
+@misc{kuninSeeingTheory,
+  title = {Seeing {{Theory}}},
+  author = {Kunin, Daniel},
+  abstract = {A visual introduction to probability and statistics.},
+  howpublished = {http://seeingtheory.io},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/4RWMT2HW/seeing-theory.brown.edu.html}
+}
+
 @book{kurosuHumanComputerInteractionDesign2020,
   title = {Human-{{Computer Interaction}}. {{Design}} and {{User Experience}}: Thematic {{Area}}, {{HCI}} 2020, {{Held}} as {{Part}} of the 22nd {{International Conference}}, {{HCII}} 2020, {{Copenhagen}}, {{Denmark}}, {{July}} 19\textendash 24, 2020, {{Proceedings}}, {{Part I}}},
   shorttitle = {Human-{{Computer Interaction}}. {{Design}} and {{User Experience}}},
