Pie pie pie one bib change

--- a/aalto.bib
+++ b/aalto.bib
@@ -7757,17 +7757,14 @@
 }
 
 @inproceedings{peledPotentialTelepresenceRobots2020,
-  title = {The {{Potential}} of {{Telepresence Robots}} for {{Intergroup Contact}}:},
-  shorttitle = {The {{Potential}} of {{Telepresence Robots}} for {{Intergroup Contact}}},
-  booktitle = {Proceedings of the 4th {{International Conference}} on {{Computer}}-{{Human Interaction Research}} and {{Applications}}},
-  author = {Peled, Avner and Leinonen, Teemu and Hasler, B{\'e}atrice},
+  title = {The {{Potential}} of {{Telepresence Robots}} for {{Intergroup Contact}}},
+  booktitle = {Proceedings of the 4th {{International Conference}} on {{Computer}}-{{Human Interaction Research}} and {{Applications}} - {{CHIRA}},},
+  author = {Peled, A. and Leinonen, T. and Hasler, B.},
   year = {2020},
+  number = {2184-3244},
   pages = {210--217},
-  publisher = {{SCITEPRESS - Science and Technology Publications}},
-  address = {{Budapest, Hungary}},
   doi = {10.5220/0010148102100217},
   isbn = {978-989-758-480-0},
-  langid = {english},
   file = {/home/avnerus/Zotero/storage/AQUYJBIS/Peled et al. - 2020 - The Potential of Telepresence Robots for Intergrou.pdf}
 }
 
